# mediumrare

./: Cargo.toml
.github/workflows/: deploy.yml  rust.yml  verify.yml
src/: client.rs  content.rs  html.rs  lib.rs  main.rs  mock_client.rs  text_markup.rs
src/templates/: head.html
test/: request.json
