[package]
name = "mediumrare"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
lambda_http = { version = "0.5.1", optional = true }
tokio = "1.18.4"
ureq = { version = "2.1.1", features = ["json", "tls"] }
lazy_static = "1.4.0"
salvo = { version = "0.17.3", optional = true, features = ["serve", "logging","anyhow"] }

[features]
default = ["lambda"]
lambda = ["lambda_http"]
standalone = ["salvo"]

[[bin]]
name = "bootstrap"
path = "src/main.rs"
