[package]
name = "mediumrare"
version = "0.1.0"
edition = "2021"
autobins = false
default-run = "bootstrap"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
lambda_http = { version = "^0.14", optional = true }
tokio = "1.18.4"
ureq = { version = "^3.0", features = ["json", "rustls"] }
lazy_static = "1.4.0"
anyhow = "^1.0"
thiserror = "^2.0"
maud = "^0.27"

[features]
default = ["lambda"]
lambda = ["lambda_http"]

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[[bin]]
name = "dump-data"
path = "src/bin/dump-data.rs"


[[bin]]
name = "render-dump"
path = "src/bin/render-dump.rs"
